--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,11 @@
 Mobpro 1. Temukan kodenya di https://github.com/Ramasanjaya22/assesment1-mopro1-nightowl\n\nCopyright © 2023 Rama Sanjaya.\nAll rights reserved.</string>
 
     <string name="koneksi_error">Koneksi error</string>
+
+    <string name="channel_name">Updater</string>
+    <string name="channel_desc">Update data gambar otomatis</string>
+
+    <string name="notif_title">Ada gambar baru!</string>
+    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
+
 </resources>
